prisma/prisma-cloud/blocks/breadcrumbs/breadcrumbs.css
main .breadcrumbs-container {
    padding: 0;
    position: relative;
    width: 100vw;
}

.landing-product .breadcrumbs-container {
    width: auto;
}

main .breadcrumbs-container::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 120%;
    top: -1px;
    background: #00C0E8;
    z-index: -2;
}

main.error .breadcrumbs-wrapper {
    padding: 0 16px;
}

.breadcrumbs {
    max-width: var(--max-width);
    margin: auto;
}

.pan-breadcrumbs ol {
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
    list-style: none;
    gap: 4px;
}

.pan-breadcrumbs a {
    font-size: 13px;
    color: #fff;
}

.pan-breadcrumbs a:visited {
    color: #fff;
}

.pan-breadcrumbs li+li::before {
    content: "|\00a0";
    padding: 0 5px;
    font-size: 10px;
    color: #fff;
}

.book .breadcrumbs-wrapper {
    margin-left: 15px;
    max-width: var(--max-width);
}

.book .breadcrumbs-container::before {
    background: transparent;
}

.book .pan-breadcrumbs li+li::before,
.book .pan-breadcrumbs a {
    color: #000;
}

@media (min-width: 768px) {
    .book .breadcrumbs-wrapper {
        margin-left: 45px;
    }
}

